[package]
name = "actix-localdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", default-features = false }
futures-util = { version = "0.3.24", default-features = false }
